Week 8 lab and build site

--- a/content/classes/NRES803/Week_8/lab_8.Rmd
+++ b/content/classes/NRES803/Week_8/lab_8.Rmd
@@ -7,7 +7,7 @@ weight: 803081
 ---
 ```{r setup2, include=FALSE, echo=FALSE}
 # set eval = FALSE in the following line to make handout
-lab.eval=TRUE 
+lab.eval=FALSE
  # set to 'hide' to produce lab handout.
 knitr::opts_chunk$set(echo = TRUE, tidy = TRUE, warning=FALSE, message=FALSE, results= 'hide', fig.show='hide', tidy.opts=list(arrow = TRUE, width.cutoff=60))
 ```
